--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,10 @@
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/index.html"
+      "destination": "/"
     }
   ],
+  "rootDirectory": "src",
   "env": {
     "VITE_FIREBASE_API_KEY": "@vite_firebase_api_key",
     "VITE_FIREBASE_AUTH_DOMAIN": "@vite_firebase_auth_domain",
